RESOLVED FIXED144600
Fix updating of tiled backing opaquenss when the page background color changes
https://bugs.webkit.org/show_bug.cgi?id=144600
Summary Fix updating of tiled backing opaquenss when the page background color changes
Simon Fraser (smfr)
Reported 2015-05-04 15:14:51 PDT
Fix updating of tiled backing opaquenss when the page background color changes
Attachments
Patch (15.33 KB, patch)
2015-05-04 15:39 PDT, Simon Fraser (smfr)
thorton: review+
Simon Fraser (smfr)
Comment 1 2015-05-04 15:39:21 PDT
Simon Fraser (smfr)
Comment 2 2015-05-04 15:40:08 PDT
Simon Fraser (smfr)
Comment 3 2015-05-04 15:54:46 PDT
Simon Fraser (smfr)
Comment 4 2015-05-04 21:31:13 PDT
Note You need to log in before you can comment on or make changes to this bug.